--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,29 @@ body {
 }
 
 .map-grid {
-  display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px 50px 50px;
   background-color: darkcyan;
+}
+
+.map-row {
+  display: flex;
 }
 
 .map-tile {
   background-color: cornflowerblue;
   border: 2px solid black;
   margin: 5px;
+  height: 50px;
+  width: 50px;
+}
+
+.tile-T {
+  background-color: brown;
+}
+
+.tile-E {
+  background-color: green;
+}
+
+.tile-G {
+  background-color: greenyellow;
 }
