--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ body {
 .tile-G {
   background-color: greenyellow;
 }
+
+.player {
+  width: 100%;
+  height: 100%;
+  background-color: blueviolet;
+}
