--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   background-color: bisque;
 }
 
+
+/*** MAP ***/
 .map-grid {
   background-color: darkcyan;
 }
@@ -30,8 +32,28 @@ body {
   background-color: greenyellow;
 }
 
+
+/*** PLAYER ***/
 .player {
   width: 100%;
   height: 100%;
   background-color: blueviolet;
+}
+
+
+/*** ENCOUNTER MODAL ***/
+.modal {
+  display: block;
+  z-index: 99;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal h1 {
+  margin: 40vh auto;
+  text-align: center;
 }
