--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@ body {
 
 
 /*** MAP ***/
-.map-grid {
+/* .map-grid {
   background-color: darkcyan;
-}
+} */
 
 .map-row {
   display: flex;
+  justify-content: center;
 }
 
 .map-tile {
@@ -55,6 +56,7 @@ body {
 .modal h1 {
   margin: 40vh auto 30px;
   text-align: center;
+  color: blanchedalmond;
 }
 
 .modal button {
